--- a/web/css/vacancesdirectes/home.less
+++ b/web/css/vacancesdirectes/home.less
@@ -117,7 +117,7 @@
     #searchBloc{position:absolute;margin-top:-258px;
       &.opened{._box-shadow(0 10px 10px -12px @colorBgGrisF);}
     }
-    #greyBoxes{margin-top:129px;}
+    #greyBoxes{margin-top:154px;}
   }
 
 
